syntax = "proto3";

package connectivity;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.messagename_all) = true;

message NodeStatus {
    message Resource {
        // protobuf bytes of corev1.ResourceList
        map<string, bytes> capacity = 1;
        map<string, bytes> allocatable = 2;
    }

    message Condition {
        // protobuf bytes of corev1.NodeCondition
        repeated bytes conditions = 1;
    }

    // protobuf bytes of corev1.NodeSystemInfo
    bytes system_info = 1;
    Resource resources = 2;
    Condition conditions = 3;
}

message PodStatus {
    enum State {
        StateUnknown = 0;
        StatePending = 1;
        StateRunning = 2;
        StateSucceeded = 3;
        StateFailed = 4;
    }

    message ContainerStatus {
        string container_id = 1;
        string image_id = 2;

        // time values in unix nano
        int64 created_at = 4;
        int64 started_at = 5;
        int64 finished_at = 6;
        int32 exit_code = 7;

        string reason = 11;
        string message = 12;
    }

    // metadata
    string uid = 1;
    // status
    map<string, ContainerStatus> container_statuses = 2;
}

message PodStatusList {
    repeated PodStatus pods = 1;
}

message Data {
    enum Kind {
        STDOUT = 0;
        STDERR = 1;
        OTHER = 2;
    }

    Kind kind = 1;
    bytes data = 2;
    // seqence to maintain
    uint64 seq = 3;
}

message Error {
    enum Kind {
        ErrCommon = 0;
        ErrNotFound = 1;
        ErrAlreadyExists = 2;
        // work not supported, aranya should ignore this error 
        // and cancel work
        ErrNotSupported = 3;
    }

    Kind kind = 1;
    string description = 2;
}
